syntax.log
C:\Users\admin\OneDrive\Documents\GitHub\Smart-Tiffin-System\backend\controllers\customer\subscriptionController.js:418
        let sourceBank = null;
            ^

SyntaxError: Identifier 'sourceBank' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1691:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v25.2.1
